# Compiler

./: .gdbinit  .gitattributes  .gitignore  Makefile  Readme.md  compiler.opam  dune-project  my_while.s  read_int  some_file.txt  some_file.txt.pub  text.s  vim
.github/: mergeable.yml
.github/workflows/: main.yml
_build/: .db  .digest-db  log
_build/default/: LICENSE  compiler.dune-package  compiler.install  compiler.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: compiler.cma  compiler.cmxa  compiler.cmxs  compiler.ml-gen
_build/default/lib/.compiler.objs/: compiler__Asm_tree.impl.d  compiler__Parser.impl.d
_build/default/lib/.compiler.objs/byte/: compiler.cmi  compiler.cmo  compiler.cmt  compiler__Asm_tree.cmi  compiler__Asm_tree.cmo  compiler__Asm_tree.cmt  compiler__Parser.cmi  compiler__Parser.cmo  compiler__Parser.cmt
_build/default/lib/.compiler.objs/native/: compiler.cmx  compiler__Asm_tree.cmx  compiler__Parser.cmx
_build/default/lib/.merlin-conf/: lib-compiler
_build/default/test/.merlin-conf/: exe-test_compiler
_build/default/test/.test_compiler.eobjs/byte/: dune__exe__Test_compiler.cmi  dune__exe__Test_compiler.cmti
_build/default/test/.test_compiler.eobjs/native/: dune__exe__Test_compiler.cmx
_build/install/default/lib/compiler/: META  dune-package  opam
lang/stdlib/: io.s
lib/: asm_tree.ml  dune  exceptions.ml  optimiator.ml  optimizator.ml  parser.ml  riscv_translator.ml
test/: dune  test_compiler.ml
test/ast_asm/: dune  run.t
test/ast_lang/: dune  run.t  several_func.clang  several_if.clang  several_while.clang  simple_variable.clang
test/func/: buffer_of_result_func.clang  dune  print_int.clang  read_int.clang  recursion.clang  run.t  simple_func.clang
test/if_else/: dune  if_else.clang  if_without_else.clang  run.t
test/while/: dune  factorial.clang  fibonacci.clang  inner_while.clang  run.t  simple_while.clang  while.clang  while_with_break.clang
