(cram
 (deps if_else_check.exe io.exe))

(rule
 (targets if_else_check.exe)
 (deps
  (:src if_else_check.s))
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run riscv64-linux-gnu-as -march=rv64gc %{src} -o if_else_check.o)
   (run riscv64-linux-gnu-as -march=rv64gc io.s -o io.o)
   (run riscv64-linux-gnu-ld if_else_check.o io.o -o %{targets}))))