(env
 (_ 
  (flags
   (:standard -w -34))))
(cram
 (deps io.o if_else.exe if_without_else.exe))

(rule
 (targets io.o)
 (action
  (progn
   (run riscv64-linux-gnu-as -march=rv64gc %{project_root}/lang/stdlib/io.s -o %{targets})
  )
 )
)

(rule
 (targets if_else.exe)
 (deps
  (:main %{project_root}/_build/default/bin/main.exe)
  (:clang if_else.clang)
  (:lib io.o)
 )
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run %{main} %{clang} if_else.s)
   (run riscv64-linux-gnu-as -march=rv64gc if_else.s -o if_else.o)
   (run riscv64-linux-gnu-ld if_else.o %{lib} -o %{targets})
  )
 )
)
(rule
 (targets if_without_else.exe)
 (deps
  (:main %{project_root}/_build/default/bin/main.exe)
  (:clang if_without_else.clang)
  (:lib io.o)
 )
 (mode  
  (promote (until-clean)))
 (action
  (progn
   (run %{main} %{clang} if_without_else.s)
   (run riscv64-linux-gnu-as -march=rv64gc if_without_else.s -o if_without_else.o)
   (run riscv64-linux-gnu-ld if_without_else.o %{lib} -o %{targets})
  )
 )
)
